chore(refactor): refactoring backend
* remove hard coded data

* get user_id from token to create booking

* changing header from authorization to token

* create a superuser with env variables
